tests/fixtures/invalid/pow_float_none.py
# Cannot call pow() with Float, None
x = pow(1.0, None)
